# Hmm-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  Hmm.cpp  Hmm.h  Hmm1.cpp  Hmm1.h  Hmm2.cpp  Hmm2.h  HmmState.cpp  HmmState.h  README.md  TestHmm.cpp  conanfile.py  conanfile.txt
Test/: Hmm1Test.cpp  Hmm2Test.cpp
include/: Matrix.h  MatrixNotPositiveDefinite.h  MatrixNotSquare.h  MatrixRowColumnMismatch.h  Vector.h
src/: CMakeLists.txt  Hmm.h  Hmm1.h  Hmm2.h  HmmState.h
